2004-12-20  Thomas Vander Stichele  <thomas at apestaart dot org>

	* configure.ac:
	  bump nano back to HEAD

=== release 0.1.4 ===

2004-12-17  Thomas Vander Stichele  <thomas at apestaart dot org>

	patch by: Zaheer Abbas Merali <zaheermerali at gmail dot com>

	* TODO:
	* configure.ac:
	* flumotion/component/effects/Makefile.am:
	* flumotion/component/effects/volume/Makefile.am:
	* flumotion/component/effects/volume/__init__.py:
	* flumotion/component/effects/volume/admin_gtk.py:
	* flumotion/component/effects/volume/volume.glade:
	* flumotion/component/effects/volume/volume.py:
	* flumotion/component/effects/volume/volume.xml:
	* flumotion/component/producers/soundcard/Makefile.am:
	* flumotion/component/producers/soundcard/admin_gtk.py:
	* flumotion/component/producers/soundcard/soundcard.py:
	* flumotion/component/producers/soundcard/soundcard.xml:
	* flumotion/ui/fgtk.py:
	  Adding a volume effect for level display, and use it in soundcard.
	  Fixes #133.

2004-12-17  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/common/common.py:
	* flumotion/configure/configure.py:
	* flumotion/service/main.py:
	* flumotion/service/service.py:
	  improve service script handling and pid file handling

2004-12-16  Thomas Vander Stichele  <thomas at apestaart dot org>

	* bin/flumotion.in:
	  remove all sorts of stuff we don't need for the service script
	* flumotion/common/common.py:
	  new function
	* flumotion/service/service.py:
	  check for dead pids

2004-12-16  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/admin/admin.py:
	* flumotion/admin/gtk/client.py:
	* flumotion/component/consumers/httpstreamer/admin_gtk.py:
	* flumotion/worker/job.py:
	* flumotion/worker/worker.py:
	  info cleanup.

2004-12-16  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/wizard/steps.py:
	  fixes #136 - warn about missing dv1394src and dvdec elements

2004-12-16  Thomas Vander Stichele  <thomas at apestaart dot org>
