@@ -26,6 +26,6 @@ hostname:(xmlfilename)
     </authentication>
 
     <feederports>8650-8659</feederports>
-    <debug>*:3</debug>
+    <debug>*:4</debug>
 
 </worker>
